[project]
dynamic = ["version"]

name = "glasgow"
description = "Software for the Glasgow Interface Explorer, a digital interface multitool"
authors = [
  {name = "Catherine", email = "whitequark@whitequark.org"},
  {name = "Glasgow Interface Explorer contributors"}
]
license = {text = "BSD-0-clause"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Hardware",
]
requires-python = "~=3.8"

dependencies = [
  "packaging>=23",
  "appdirs~=1.4",
  "amaranth[builtin-yosys] @ git+https://github.com/amaranth-lang/amaranth.git",
  "fx2>=0.11",
  "libusb1>=1.8.1",
  "pyvcd",
  "bitarray",
]

[project.optional-dependencies]
builtin-toolchain = [
  "yowasp-runtime>=1.30",
  "yowasp-yosys>=0.31.0.13",
  "yowasp-nextpnr-ice40>=0.1",
]
http = [
  "aiohttp~=3.8",
  "aiohttp-remotes~=1.2",
]

[project.scripts]
glasgow = "glasgow.cli:main"

[project.entry-points."glasgow.applet"]
selftest = "glasgow.applet.internal.selftest:SelfTestApplet"
benchmark = "glasgow.applet.internal.benchmark:BenchmarkApplet"

analyzer = "glasgow.applet.interface.analyzer:AnalyzerApplet"
uart = "glasgow.applet.interface.uart:UARTApplet"
spi-controller = "glasgow.applet.interface.spi_controller:SPIControllerApplet"
i2c-initiator = "glasgow.applet.interface.i2c_initiator:I2CInitiatorApplet"
i2c-target = "glasgow.applet.interface.i2c_target:I2CTargetApplet"
jtag-pinout = "glasgow.applet.interface.jtag_pinout:JTAGPinoutApplet"
jtag-probe = "glasgow.applet.interface.jtag_probe:JTAGProbeApplet"
jtag-openocd = "glasgow.applet.interface.jtag_openocd:JTAGOpenOCDApplet"
jtag-svf = "glasgow.applet.interface.jtag_svf:JTAGSVFApplet"
ps2-host = "glasgow.applet.interface.ps2_host:PS2HostApplet"
sbw-probe = "glasgow.applet.interface.sbw_probe:SpyBiWireProbeApplet"

memory-24x = "glasgow.applet.memory._24x:Memory24xApplet"
memory-25x = "glasgow.applet.memory._25x:Memory25xApplet"
memory-onfi = "glasgow.applet.memory.onfi:MemoryONFIApplet"
memory-prom = "glasgow.applet.memory.prom:MemoryPROMApplet"
memory-floppy = "glasgow.applet.memory.floppy:MemoryFloppyApplet"

debug-arc = "glasgow.applet.debug.arc:DebugARCApplet"
debug-arm = "glasgow.applet.debug.arm.jtag:DebugARMJTAGApplet"
debug-mips = "glasgow.applet.debug.mips:DebugMIPSApplet"

program-avr-spi = "glasgow.applet.program.avr.spi:ProgramAVRSPIApplet"
program-ice40-flash = "glasgow.applet.program.ice40_flash:ProgramICE40FlashApplet"
program-ice40-sram = "glasgow.applet.program.ice40_sram:ProgramICE40SRAMApplet"
program-m16c = "glasgow.applet.program.m16c:ProgramM16CApplet"
program-mec16xx = "glasgow.applet.program.mec16xx:ProgramMEC16xxApplet"
program-nrf24lx1 = "glasgow.applet.program.nrf24lx1:ProgramNRF24Lx1Applet"
program-stusb4500-nvm = "glasgow.applet.program.stusb4500_nvm:StUsb4500NvmApplet"
program-xc6s = "glasgow.applet.program.xc6s:ProgramXC6SApplet"
program-xc9500xl = "glasgow.applet.program.xc9500xl:ProgramXC9500XLApplet"

control-tps6598x = "glasgow.applet.control.tps6598x:ControlTPS6598xApplet"

sensor-bmx280 = "glasgow.applet.sensor.bmx280:SensorBMx280Applet"
sensor-hx711 = "glasgow.applet.sensor.hx711:SensorHX711Applet"
sensor-ina260 = "glasgow.applet.sensor.ina260:SensorINA260Applet"
sensor-mouse-ps2 = "glasgow.applet.sensor.mouse_ps2:SensorMousePS2Applet"
sensor-pmsx003 = "glasgow.applet.sensor.pmsx003:SensorPMSx003Applet"
sensor-sen5x = "glasgow.applet.sensor.sen5x:SensorSEN5xApplet"
sensor-scd30 = "glasgow.applet.sensor.scd30:SensorSCD30Applet"

display-hd44780 = "glasgow.applet.display.hd44780:DisplayHD44780Applet"
display-pdi = "glasgow.applet.display.pdi:DisplayPDIApplet"

audio-dac = "glasgow.applet.audio.dac:AudioDACApplet"
audio-yamaha-opx = "glasgow.applet.audio.yamaha_opx:AudioYamahaOPxApplet [http]"

video-hub75-output = "glasgow.applet.video.hub75_output:VideoHub75OutputApplet"
video-rgb-input = "glasgow.applet.video.rgb_input:VideoRGBInputApplet"
video-vga-output = "glasgow.applet.video.vga_output:VGAOutputApplet"
video-ws2812-output = "glasgow.applet.video.ws2812_output:VideoWS2812OutputApplet"

radio-nrf24l1 = "glasgow.applet.radio.nrf24l01:RadioNRF24L01Applet"

[project.urls]
# "Documentation" = "https://glasgow.readthedocs.io/"
"Source Code" = "https://github.com/GlasgowEmebedded/Glasgow"
"Bug Tracker" = "https://github.com/GlasgowEmebedded/Glasgow/issues"

# Build system configuration

[build-system]
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"glasgow.device" = ["firmware.ihex"]

[tool.setuptools_scm]
root = ".."
local_scheme = "node-and-timestamp"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = ["setuptools"]

[tool.pdm.scripts]
test = {cmd = "test.py -v"}
